(lang dune 2.8)
(version 0.0.0)
(name gmod)
(source (github cosynus-lix/gmod))
(license GPL-3.0)
(authors "Emmanuel Haucourt <emmanuel.haucourt@polytechnique.edu>")
(maintainers "Emmanuel Haucourt <emmanuel.haucourt@polytechnique.edu>")

(generate_opam_files true)
(package
  (name gmod)
  (synopsis "Compute on geometric modelds")
)