(lang dune 2.8)
(name gmod)
(license GPL-3.0)
(source (github cosynus-lix/gmod))
(authors "Emmanuel Haucourt <emmanuel.haucourt@polytechnique.edu>")
(maintainers "Emmanuel Haucourt <emmanuel.haucourt@polytechnique.edu>")

(generate_opam_files true)
(package
  (name gmod)
  (synopsis "Compute on geometric modelds")
)
